# groovy-dsl-generator

./: .gitignore  README.md  configure.ac
examples/: 0001.def  0002-undeclared-type.def  0003.def
samples-broken/: closure-with-closure.def  closure-with-something.def  no-package-at-start.def  unknown-token.def
samples-working/: 0001.def
src/: .gitignore  Makefile  Makefile.am  dslgen.cpp  dslgen.h  gdg.lex  gdg.lpp  gdg.y  heading.h  lexer.lpp  main.cpp  myparser.cpp  myparser.h
tests/: 0003-duplicate-type.def  0004-unknown-token.def
